# rait-mle-assessment

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: assessment.yaml
data/red_team/: attacks.json  test_queries.json
data/supplier_a/: interactions.json
data/supplier_b/: interactions.csv
data/supplier_c/: sample_interactions.json  summary.json
docs/: 90_day_plan.md  calibration.md  metric_definitions.md  regulatory_landscape.md  threat_coverage.md
src/: __init__.py  cli.py  config.py
src/adapters/: base.py  ingestion.py  supplier_a.py  supplier_b.py  supplier_c.py
src/adversarial/: dataset.py  judge.py  mutation.py  retrieval.py
src/coverage/: reporting.py
src/metrics/: base.py  fairness.py  security.py  transparency.py
src/schema/: __init__.py  models.py
src/scoring/: __init__.py  nli_scorer.py
src/statistics/: __init__.py  confidence.py
tests/: test_pipeline.py
